* 优化 newInstance